updated z-index issue

--- a/css/navigation-component.css
+++ b/css/navigation-component.css
@@ -175,5 +175,6 @@
     background-color: #fff;
     position: fixed;
     top: 0;
+    z-index: 1;
 
   }
